<resources>
    <string name="app_name">medecin9</string>
    <string name="medecin">Médecin</string>
    <string name="logo_et_adresse">Logo et adresse</string>
    <string name="suivant">Suivant</string>
    <string name="retour">Retour </string>
    <string name="avis">Avis</string>
    <string name="libelle">Libellé:</string>
    <string name="prenom_medecin">Prénom du médecin:</string>
    <string name="nom_medecin">Nom du médecin:</string>
    <string name="date">Date</string>
    <string name="description_avis">Description de l\'avis:</string>
    <string name="logo">Logo</string>
    <string name="prescription">Prescription</string>
    <string name="posologie">Posologie</string>
    <string name="date_de_debut">Date de début</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="validation">validation</string>
    <string name="nom_medicament">Nom du médicament</string>
    <string name="id_du_patient">Id du patient</string>
</resources>
