<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <!-- Titre "Médecins" -->
    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medecin"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="#FFC857"/>

    <!-- Image Médecins -->
    <ImageView
        android:id="@+id/imageMedecin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/medecin"
        android:src="@drawable/medecin"
        android:layout_marginBottom="20dp"/>

    <!-- Image du Logo et de l'adresse -->
    <ImageView
        android:id="@+id/imageLogoAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_et_adresse"
        android:src="@drawable/logoadresse"
        android:layout_marginBottom="20dp"/>
        <!-- bouton de la page suivante -->

    <Button
        android:id="@+id/boutonPrecedent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/jaune"
        android:text="@string/suivant"
        android:onClick="pageSuivante"/>
        <!-- voir res/values/styles-->

</LinearLayout>
